--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "posh-git"]
+[submodule "external/posh-git"]
 	path = external/posh-git
-	url = git://github.com/dahlbyk/posh-git.git
+	url = https://github.com/dahlbyk/posh-git.git
